--- a/public/contact.html
+++ b/public/contact.html
@@ -19,7 +19,7 @@
         </div>
     </section>
     <div class="contact">
-        <form>
+        <form action="https://formsubmit.co/your@email.com" method="POST">
             <div class="input-group">
                 <textarea id="name" rows="1" required></textarea>
                 <label for="name">Name</label>
@@ -38,8 +38,6 @@
     <div class="email">
         <h2>Or feel free to reach us at <a href="mailto:hello@siestaatelier.com">hello@siestaatelier.com</a></h2>
     </div>
-    <script src="js/app.js"></script>
-
     </script>
 </body>
 </html>
