--- a/public/contact.html
+++ b/public/contact.html
@@ -19,7 +19,7 @@
         </div>
     </section>
     <div class="contact">
-        <form action="https://formsubmit.co/your@email.com" method="POST">
+        <form action="https://formsubmit.co/hello@siestaatelier.com" method="POST">
             <div class="input-group">
                 <textarea id="name" rows="1" required></textarea>
                 <label for="name">Name</label>
