--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,11 @@
             </ul>
         </div>
     </section>
+    <section id="main">
+        <div class="shape"></div>
+        <img src="resources/img001.jpg" class="img1" alt="img001">
+        <img src="resources/img002.jpg" class="img2" alt="img002">
+        <h1 class="NLText">SIGN UP TO GET EARLY ACCSSS</h1>
+    </section>
 </body>
 </html>
