CSS change + Homepage input field
+ Moved CSS for Contact and Index in separate files
+ Created input area with working button for email subscription

--- a/public/contact.html
+++ b/public/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Siesta Atelier - Contact</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_contact.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </div>
     </section>
     <div class="contact">
-        <form class="formContact" action="https://formsubmit.co/hello@siestaatelier.com" method="POST">
+        <form class="form" action="https://formsubmit.co/hello@siestaatelier.com" method="POST">
             <div class="input-group">
                 <textarea id="name" rows="1" required></textarea>
                 <label for="name">Name</label>
