--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Siesta Atelier - Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_index.css">
 </head>
 
 <body>
     <section id="header">
-        <a href="index.html" style="padding-left: 10%;"><img src="resources/logo-blue.png" class="Logo" alt="Logo"></a>
-            <div style="padding-right: 20%;">
+        <a href="index.html"><img src="resources/logo-blue.png" class="Logo" alt="Logo"></a>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
-            </ul>
+            </ul>   
         </div>
     </section>
     <section id="main">
@@ -26,8 +25,8 @@
     </section>
     <form class="formMain">
         <div class="inputEmail">
-            <input type="email" id="email" required placeholder=" ">
-            <label for="email">Your Email</label>
+            <input type="email" id="email" required placeholder="Your email">
+            <label for="email" ></label>
         </div>
         <button type="submit"><img src="resources/next-button.png" width="30px"></button>
     </form>
